--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.10.9",
+        "@mui/material": "^5.10.9",
         "@nivo/bar": "^0.80.0",
         "@nivo/calendar": "^0.80.0",
         "@nivo/colors": "^0.80.0",
@@ -17,9 +21,11 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "ahooks": "^3.7.1",
+        "daisyui": "^2.31.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "theme-change": "^2.2.0",
         "typescript": "^4.8.3",
         "web-vitals": "^2.1.4"
     },
@@ -46,5 +52,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.1.8"
     }
 }
