--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,60 +1,38 @@
 {
-    "name": "frontend",
+    "name": "frontend_next",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:5000",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
     "dependencies": {
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@mui/icons-material": "^5.10.9",
-        "@mui/material": "^5.10.9",
+        "@mui/material": "^5.10.10",
         "@nivo/bar": "^0.80.0",
         "@nivo/calendar": "^0.80.0",
         "@nivo/colors": "^0.80.0",
         "@nivo/core": "^0.80.0",
         "@nivo/line": "^0.80.0",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.11.62",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "ahooks": "^3.7.1",
-        "daisyui": "^2.31.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "theme-change": "^2.2.0",
-        "typescript": "^4.8.3",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "ahooks": "^3.7.2",
+        "next": "12.3.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "theme-change": "^2.2.0"
     },
     "devDependencies": {
-        "react-router-dom": "^6.4.2",
-        "tailwindcss": "^3.1.8"
+        "@types/node": "18.11.4",
+        "@types/react": "18.0.21",
+        "@types/react-dom": "18.0.6",
+        "autoprefixer": "^10.4.12",
+        "eslint": "8.26.0",
+        "eslint-config-next": "12.3.1",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
+        "typescript": "4.8.4"
     }
 }
