--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "@types/node": "18.11.4",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
+        "daisyui": "^2.6.0",
         "autoprefixer": "^10.4.12",
         "eslint": "8.26.0",
         "eslint-config-next": "12.3.1",
