history done, started weekly, theming works

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,30 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.4",
-        "@emotion/styled": "^11.10.4",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.9",
-        "@mui/material": "^5.10.10",
+        "@mui/material": "^5.10.11",
         "@nivo/bar": "^0.80.0",
         "@nivo/calendar": "^0.80.0",
         "@nivo/colors": "^0.80.0",
         "@nivo/core": "^0.80.0",
+        "@nivo/heatmap": "^0.80.0",
         "@nivo/line": "^0.80.0",
-        "ahooks": "^3.7.2",
         "next": "12.3.1",
         "react": "18.2.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "18.2.0",
+        "react-query": "^3.39.2",
         "theme-change": "^2.2.0"
     },
     "devDependencies": {
         "@types/node": "18.11.4",
         "@types/react": "18.0.21",
+        "@types/react-datepicker": "^4.4.2",
         "@types/react-dom": "18.0.6",
-        "daisyui": "^2.6.0",
         "autoprefixer": "^10.4.12",
+        "daisyui": "^2.6.0",
         "eslint": "8.26.0",
         "eslint-config-next": "12.3.1",
         "postcss": "^8.4.18",
