--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ RUN pip3 install --no-cache --upgrade pip
 COPY requirements.txt .
 RUN pip3 install --no-cache -r requirements.txt
 
+COPY .env.deploy .env.local
 COPY . .
 
 EXPOSE 5000
