--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "react-datepicker": "^4.8.0",
         "react-dom": "18.2.0",
         "react-query": "^3.39.2",
+        "sharp": "^0.31.2",
         "theme-change": "^2.2.0"
     },
     "devDependencies": {
