--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
+        "@emotion/server": "^11.10.0",
         "@emotion/styled": "^11.10.5",
+        "@mantine/core": "^5.8.3",
+        "@mantine/dates": "^5.8.3",
+        "@mantine/hooks": "^5.8.3",
+        "@mantine/notifications": "^5.8.3",
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.11",
         "@nivo/bar": "^0.80.0",
@@ -19,6 +24,7 @@
         "@nivo/core": "^0.80.0",
         "@nivo/heatmap": "^0.80.0",
         "@nivo/line": "^0.80.0",
+        "dayjs": "^1.11.6",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-datepicker": "^4.8.0",
@@ -30,10 +36,8 @@
     "devDependencies": {
         "@types/node": "18.11.4",
         "@types/react": "18.0.21",
-        "@types/react-datepicker": "^4.4.2",
         "@types/react-dom": "18.0.6",
         "autoprefixer": "^10.4.12",
-        "daisyui": "^2.6.0",
         "eslint": "8.26.0",
         "eslint-config-next": "12.3.1",
         "postcss": "^8.4.18",
