--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,14 @@
         "@mantine/dates": "^5.8.3",
         "@mantine/hooks": "^5.8.3",
         "@mantine/notifications": "^5.8.3",
-        "@mui/icons-material": "^5.10.9",
-        "@mui/material": "^5.10.11",
         "@nivo/bar": "^0.80.0",
         "@nivo/calendar": "^0.80.0",
         "@nivo/colors": "^0.80.0",
         "@nivo/core": "^0.80.0",
         "@nivo/heatmap": "^0.80.0",
         "@nivo/line": "^0.80.0",
-        "dayjs": "^1.11.6",
+        "@tabler/icons": "^1.112.0",
+        "axios": "^1.2.0",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-datepicker": "^4.8.0",
