--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "analyze": "ANALYZE=true next build"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
@@ -15,6 +16,7 @@
         "@mantine/core": "^5.9.0",
         "@mantine/dates": "^5.9.0",
         "@mantine/hooks": "^5.9.0",
+        "@mantine/next": "^5.9.5",
         "@mantine/notifications": "^5.9.0",
         "@mantine/nprogress": "^5.9.0",
         "@nivo/bar": "^0.80.0",
@@ -41,6 +43,7 @@
         "autoprefixer": "^10.4.12",
         "eslint": "8.26.0",
         "eslint-config-next": "12.3.1",
+        "next-bundle-analyzer": "^0.6.5",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "typescript": "4.8.4"
