--- a/backend/scraper/docker-compose.yaml
+++ b/backend/scraper/docker-compose.yaml
@@ -5,3 +5,10 @@ services:
     volumes:
       - ./data:/app/data
       - ./migrations:/app/migrations
+    env_file:
+      - ../.env.dev
+
+# connects to the same network as the backend
+networks:
+  default:
+    name: wenjim
