--- a/.github/workflows/docker-scraper-staging.yaml
+++ b/.github/workflows/docker-scraper-staging.yaml
@@ -2,7 +2,7 @@ name: Build Release Scraper
 
 on:
   push:
-    branches: ["master"]
+    branches: ["staging", "scraper-rewrite"]
 
 jobs:
   build:
@@ -32,6 +32,4 @@ jobs:
           file: ./backend/scraper/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache,mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:staging
