--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,31 @@
 # Dockerfile used for local developement
 
-FROM python:3.11-alpine3.16
+FROM python:3.11-alpine3.17 as base
 
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONFAULTHANDLER=1 \
+    PIP_DEFAULT_TIMEOUT=100 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PIP_NO_CACHE_DIR=1 \
+    POETRY_VERSION=1.3
 
 WORKDIR /app
 
-RUN python3 -m ensurepip
-RUN pip3 install --no-cache --upgrade pip
+RUN apk add --no-cache gcc musl-dev libpq-dev
+RUN pip install --no-cache "poetry==$POETRY_VERSION"
+RUN python -m venv /venv
 
-COPY requirements.txt .
-RUN pip3 install --no-cache -r requirements.txt
+COPY pyproject.toml poetry.lock ./
+RUN poetry export -f requirements.txt | /venv/bin/pip install -r /dev/stdin
 
-# installs the requirements from the scraper as well
-COPY scraper/requirements.txt scraper/requirements.txt
-RUN pip3 install --no-cache -r scraper/requirements.txt
+
+FROM base as final
+
+WORKDIR /app
 
 COPY scraper/models.py scraper/models.py
 COPY server.py .
 
 EXPOSE 5000
 
-CMD python3 server.py
+CMD /venv/bin/python server.py
