Scraper rewrite done (#19)
* scraper rewrite. untested

* intermediate change

* scraper patched up

* now it fetches

* minor fixes

* cleanup and removed duplicate entries

* added general queries (have to be flipped for return values)

* finished scraper rewrite

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -7,7 +7,5 @@ services:
     ports:
       - "5000:5000"
     expose: [ 5000 ]
-    volumes:
-      - ./data:/data
-    environment:
-      - FLASK_DEBUG=true
+    env_file:
+      - .env.dev
