--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ peewee = "^3.15.4"
 python-dateutil = "^2.8.2"
 Flask-Compress = "^1.13"
 pytz = "^2022.7.1"
+grpcio = "^1.51.1"
+grpcio-tools = "^1.51.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.10"
