--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["markbeep <mrkswrn@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.10"
 Flask = "^2.2.2"
 python-jwt = "^4.0.0"
 gunicorn = "^20.1.0"
