--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,9 @@
         "@tabler/icons": "^1.112.0",
         "axios": "^1.2.0",
         "dayjs": "^1.11.6",
+        "grpc": "^1.24.11",
+        "grpc_tools_node_protoc_ts": "^5.3.2",
+        "grpc-tools": "^1.12.3",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-datepicker": "^4.8.0",
