--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["markbeep <mrkswrn@gmail.com>"]
 readme = "README.md"
+packages = [{include = "../backend"}]
 
 [tool.poetry.dependencies]
-python = "~3.10"
+python = "^3.11"
 Flask = "^2.2.2"
 python-jwt = "^4.0.0"
 gunicorn = "^20.1.0"
@@ -21,7 +22,21 @@ grpcio-tools = "^1.51.1"
 pylint = "^2.15.10"
 black = "^22.12.0"
 requests = "^2.28.2"
+poethepoet = "^0.18.1"
 
 [build-system]
 requires = ["poetry-core", "poetry>=1.3"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = "server:main"
+
+[tool.poe.tasks]
+build = """
+    python -m grpc_tools.protoc
+        -I../proto
+        --python_out=.
+        --pyi_out=.
+        --grpc_python_out=.
+        ../proto/generated/*.proto
+"""
