--- a/backend/scraper/pyproject.toml
+++ b/backend/scraper/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["markbeep <mrkswrn@gmail.com>"]
 readme = "README.md"
+packages = [{include = "../scraper"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -19,3 +20,6 @@ black = "^22.12.0"
 [build-system]
 requires = ["poetry-core", "poetry>=1.3"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = "server:main"
