--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,16 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "analyze": "ANALYZE=true next build"
+        "analyze": "ANALYZE=true next build",
+        "build:proto": "proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=generated/ ../proto/generated/*.proto",
+        "prebuild": "npm run build:proto"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/server": "^11.10.0",
         "@emotion/styled": "^11.10.5",
+        "@grpc/grpc-js": "^1.8.7",
+        "@grpc/proto-loader": "^0.7.4",
         "@mantine/core": "^5.9.0",
         "@mantine/dates": "^5.9.0",
         "@mantine/hooks": "^5.9.0",
@@ -28,9 +32,6 @@
         "@tabler/icons": "^1.112.0",
         "axios": "^1.2.0",
         "dayjs": "^1.11.6",
-        "grpc": "^1.24.11",
-        "grpc_tools_node_protoc_ts": "^5.3.2",
-        "grpc-tools": "^1.12.3",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-datepicker": "^4.8.0",
