--- a/backend/scraper/pyproject.toml
+++ b/backend/scraper/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["poetry-core", "poetry>=1.3"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "server:main"
+start = "scraper:main"
