grpc requesting finally works

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,16 @@
-FROM node:16-alpine as build-stage
+FROM node:18-alpine3.17 as build-stage
 
 WORKDIR /app
 
 COPY package*.json /app/
 RUN npm install --production
 COPY . .
+COPY proto .
 COPY public/ public/
 COPY tsconfig.json .
 COPY tailwind.config.js .
 
-ENV BACKEND_PROXY=http://wenjim-backend-staging:5000
+ENV BACKEND_PROXY=http://wenjim-backend-staging:8080
 
 RUN npm run build
 
