--- a/frontend/docker-compose.yaml
+++ b/frontend/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   frontend:
-    build: .
+    build:
+      context: ../
+      dockerfile: ./Dockerfile
     restart: "no"
     ports:
       - "3000:3000"
