--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
         "build:proto": "bash compile-proto.sh",
         "prebuild": "npm run build:proto"
     },
-    "devDependencies": {
+    "dependencies": {
         "@emotion/react": "^11.10.5",
         "@mantine/core": "^5.9.0",
         "@mantine/hooks": "^5.9.0",
@@ -28,13 +28,10 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "autoprefixer": "^10.4.13",
-        "eslint": "^8.34.0",
-        "eslint-config-next": "^13.2.1",
         "google-protobuf": "^3.21.2",
         "grpc-tools": "^1.12.4",
         "grpc-web": "^1.4.2",
         "next": "^13.2.1",
-        "next-bundle-analyzer": "^0.6.5",
         "postcss": "^8.4.18",
         "protoc-gen-grpc-web": "^1.4.1",
         "react": "18.2.0",
@@ -43,5 +40,9 @@
         "tailwindcss": "^3.2.1",
         "ts-protoc-gen": "^0.15.0",
         "typescript": "^4.9.5"
+    },
+    "devDependencies": {
+        "eslint": "^8.34.0",
+        "eslint-config-next": "^13.2.1"
     }
 }
