--- a/.github/workflows/docker-staging.yaml
+++ b/.github/workflows/docker-staging.yaml
@@ -35,11 +35,11 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:staging
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache,mode=max
-      
+
       - name: Build and push frontend
         uses: docker/build-push-action@v3
         with:
-          context: ./frontend
+          context: .
           file: ./frontend/Dockerfile
           platforms: linux/amd64
           push: true
