--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@mantine/core": "^5.9.0",
+        "@mantine/dates": "^5.10.4",
         "@mantine/hooks": "^5.9.0",
         "@mantine/next": "^5.9.5",
         "@mantine/notifications": "^5.9.0",
@@ -36,6 +37,7 @@
         "protoc-gen-grpc-web": "^1.4.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-ga": "^3.3.1",
         "react-query": "^3.39.2",
         "tailwindcss": "^3.2.1",
         "ts-protoc-gen": "^0.15.0",
