slight proxy fixes

--- a/.github/workflows/docker-prod.yaml
+++ b/.github/workflows/docker-prod.yaml
@@ -42,3 +42,12 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:latest
+
+      - name: Build and push envoy
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile_envoy
+          platforms: linux/amd64
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:latest
