--- a/.github/workflows/docker-staging.yaml
+++ b/.github/workflows/docker-staging.yaml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./Dockerfile_envoy
+          file: ./Dockerfile_envoy_staging
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:staging
