--- a/envoy_prod.yaml
+++ b/envoy_prod.yaml
@@ -49,4 +49,5 @@ static_resources:
           - lb_endpoints:
               - endpoint:
                   address:
-                    socket_address: { address: grpc-backend, port_value: 9090 }
+                    socket_address:
+                      { address: wenjim-backend-prod, port_value: 9090 }
