--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "autoprefixer": "^10.4.13",
+        "eslint": "^8.34.0",
+        "eslint-config-next": "^13.2.1",
         "google-protobuf": "^3.21.2",
         "grpc-tools": "^1.12.4",
         "grpc-web": "^1.4.2",
@@ -44,7 +46,6 @@
         "typescript": "^4.9.5"
     },
     "devDependencies": {
-        "eslint": "^8.34.0",
-        "eslint-config-next": "^13.2.1"
+        "cross-env": "^7.0.3"
     }
 }
