--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,10 @@
 version: '3'
 
 services:
-  wenjim-backend-staging:
-    build: .
+  grpc-backend:
+    build:
+      context: .
+      dockerfile: ./backend/Dockerfile
     restart: on-failure
     ports:
       - "9090:9090"
@@ -11,9 +13,12 @@ services:
 
   envoy:
     build:
-      context: .
-      dockerfile: Dockerfile_envoy_staging
+      context: ./envoy
+      dockerfile: ./Dockerfile
     ports:
       - "8080:8080"
     depends_on:
-      - wenjim-backend-staging
+      - grpc-backend
+    environment:
+      - BACKEND_HOST=grpc-backend
+      - BACKEND_PORT=9090
