--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -32,9 +32,9 @@ jobs:
           file: ./backend/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:${GITHUB_REF}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache-${GITHUB_REF}
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache-${GITHUB_REF},mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:${{ github.github_ref }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache-${{ github.github_ref }}
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-backend:buildcache-${{ github.github_ref }},mode=max
 
       - name: Build and push frontend
         uses: docker/build-push-action@v3
@@ -43,9 +43,9 @@ jobs:
           file: ./frontend/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:${GITHUB_REF}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:buildcache-${GITHUB_REF}
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:buildcache-${GITHUB_REF},mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:${{ github.github_ref }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:buildcache-${{ github.github_ref }}
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-graph-frontend:buildcache-${{ github.github_ref }},mode=max
 
       - name: Build and push envoy
         uses: docker/build-push-action@v3
@@ -54,9 +54,9 @@ jobs:
           file: ./envoy/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:${GITHUB_REF}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:buildcache-${GITHUB_REF}
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:buildcache-${GITHUB_REF},mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:${{ github.github_ref }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:buildcache-${{ github.github_ref }}
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wenjim-envoy:buildcache-${{ github.github_ref }},mode=max
 
       - name: Build and push scraper
         uses: docker/build-push-action@v3
@@ -65,6 +65,6 @@ jobs:
           file: ./backend/scraper/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:${GITHUB_REF}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache-${GITHUB_REF}
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache-${GITHUB_REF},mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:${{ github.github_ref }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache-${{ github.github_ref }}
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/asvz-tracker:buildcache-${{ github.github_ref }},mode=max
