--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ Flask-Compress = "^1.13"
 pytz = "^2022.7.1"
 grpcio = "^1.51.1"
 grpcio-tools = "^1.51.1"
+sonora = "^0.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.10"
