--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,7 +30,7 @@ requires = ["poetry-core", "poetry>=1.3"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "server:main"
+start = "server:serve"
 
 [tool.poe.tasks]
 build = """
