--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ pytz = "^2022.7.1"
 grpcio = "^1.51.1"
 grpcio-tools = "^1.51.1"
 sonora = "^0.2.2"
+peewee-migrate = "^1.7.1"
+psycopg2 = "^2.9.6"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.10"
