--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,26 @@ services:
     restart: on-failure
     ports:
       - "8080:8080"
+    env_file:
+      - .env
+    depends_on:
+      psql:
+        condition: service_healthy
+  psql:
+    container_name: psql
+    image: postgres:15.2-alpine3.17
     volumes:
-      - ./backend/data:/app/data
+      - ./backend/data/sql:/var/lib/postgresql/data
+      - ./backend/data/csv:/csv
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-u postgres"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
 networks:
   wenjim:
