--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,6 +33,7 @@ WORKDIR /app
 # migrations
 COPY backend/manage.py .
 COPY backend/migrations/ /app/migrations
+COPY backend/move.py .
 
 COPY backend/scraper/models.py scraper/models.py
 COPY backend/server.py backend/history.py backend/utility.py backend/weekly.py ./
@@ -40,4 +41,5 @@ COPY backend/server.py backend/history.py backend/utility.py backend/weekly.py .
 EXPOSE 5000
 
 CMD /venv/bin/python manage.py migrate && \
+    /venv/bin/python move.py && \
     /venv/bin/gunicorn -w 4 -b 0.0.0.0:8080 'server:app'
