--- a/backend/scraper/docker-compose.yaml
+++ b/backend/scraper/docker-compose.yaml
@@ -2,7 +2,22 @@ services:
   scraper:
     build: .
     restart: "no"
-    volumes:
-      - ../data:/app/data
     env_file:
-      - ../.env.dev
+      - ../../.env
+    depends_on:
+      psql:
+        condition: service_healthy
+  psql:
+    container_name: psql-scraper
+    image: postgres:15.2-alpine3.17
+    volumes:
+      - ../data/sql:/var/lib/postgresql/data
+    env_file:
+      - ../../.env
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-u postgres"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
