--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.8",
         "@mantine/core": "^5.9.0",
         "@mantine/dates": "^5.10.4",
         "@mantine/hooks": "^5.9.0",
