--- a/backend/scraper/docker-compose.yaml
+++ b/backend/scraper/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-u postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 3s
       retries: 5
