--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,41 +12,42 @@
         "prebuild": "npm run build:proto"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.8",
-        "@mantine/core": "^5.9.0",
-        "@mantine/dates": "^5.10.4",
-        "@mantine/hooks": "^5.9.0",
-        "@mantine/next": "^5.9.5",
-        "@mantine/notifications": "^5.9.0",
-        "@mantine/nprogress": "^5.9.0",
-        "@mantine/spotlight": "^5.10.4",
-        "@nivo/calendar": "^0.80.0",
-        "@nivo/core": "^0.80.0",
-        "@nivo/line": "^0.80.0",
-        "@tabler/icons-react": "^2.5.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mantine/core": "^6.0.13",
+        "@mantine/dates": "^6.0.13",
+        "@mantine/hooks": "^6.0.13",
+        "@mantine/next": "^6.0.13",
+        "@mantine/notifications": "^6.0.13",
+        "@mantine/nprogress": "^6.0.13",
+        "@mantine/spotlight": "^6.0.13",
+        "@nivo/calendar": "^0.83.0",
+        "@nivo/core": "^0.83.0",
+        "@nivo/line": "^0.83.0",
+        "@tabler/icons-react": "^2.22.0",
         "@types/google-protobuf": "^3.15.6",
-        "@types/node": "^18.14.1",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
+        "@types/node": "^20.3.1",
+        "@types/react": "^18.2.12",
+        "@types/react-dom": "^18.2.5",
         "@types/react-infinite-scroller": "^1.2.3",
-        "autoprefixer": "^10.4.13",
-        "eslint": "^8.34.0",
-        "eslint-config-next": "^13.2.1",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.43.0",
+        "eslint-config-next": "^13.4.6",
         "fuzzysort": "^2.0.4",
         "google-protobuf": "^3.21.2",
         "grpc-tools": "^1.12.4",
         "grpc-web": "^1.4.2",
-        "next": "^13.2.1",
-        "postcss": "^8.4.18",
-        "protoc-gen-grpc-web": "^1.4.1",
+        "next": "^13.4.6",
+        "postcss": "^8.4.24",
+        "protoc-gen-grpc-web": "^1.4.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-ga": "^3.3.1",
         "react-infinite-scroller": "^1.2.6",
-        "react-query": "^3.39.2",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^4.9.5"
+        "react-query": "^3.39.3",
+        "tailwindcss": "^3.3.2",
+        "@next/bundle-analyzer": "^13.4.6",
+        "typescript": "^5.1.3"
     },
     "devDependencies": {
         "cross-env": "^7.0.3"
