--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@mantine/nprogress": "^6.0.13",
         "@mantine/spotlight": "^6.0.13",
         "@next/bundle-analyzer": "^13.4.6",
+        "@nivo/line": "^0.83.0",
         "@tabler/icons-react": "^2.22.0",
         "@types/google-protobuf": "^3.15.6",
         "@types/node": "^20.3.1",
